@@ -302,6 +302,11 @@ void pkg_action_upgrade_all(const rc_config *global_config){
 		);
 		if( update_pkg != NULL ){
 
+			if( is_excluded(global_config,update_pkg->name) == 1 ){
+				add_exclude_to_transaction(&tran,update_pkg);
+				continue;
+			}
+
 			/* if the update has a newer version */
 			if( (cmp_pkg_versions(installed_pkgs->pkgs[iterator]->version,update_pkg->version)) < 0 ){
 
